--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Kites Immigration & Visa Consultancy</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://kitesimmigration.com/images/logo.png">
-    
+
 </head>
 
 <body>
@@ -151,6 +151,103 @@
                     competitive exchange rates. We also guide you with wire transfers, currency exchange, international
                     debit cards and demand drafts. Insurance: We assist for student travel insurance, medical insurance,
                     loss and accident insurance (combined and lower than international rates).</p>
+            </div>
+        </div>
+    </div>
+
+    <div id="main4">
+        <h1 id="tl">the engine <br>behind visa</h1>
+        <img src="https://kitesimmigration.com/images/woman.png" alt="img" id="p1">
+        <h3 id="d"> <span style="text-decoration: overline;">a team </span> of experts </h3>
+        <p id="d1">
+            Our certified counselors are expert in guiding students to make their choice of course and country of study.
+            They assist the students by providing authentic information, by making the different options available to
+            them and by helping choose the right course. Choosing the right course/program is critical. With the
+            knowledge & experience our counselors have, we guide you to the right university considering your needs.
+            Most institutions have their specific requirements for an application. Our team strictly follows these
+            guidelines to ensure higher success and faster response. We help you prepare answers to questions that
+            universities are probably going to inquire. These mock interview sessions are conducted by our experts who
+            are well known with the type of questions that universities generally ask. We assist you through the
+            complete Visa process like filling online/offline applications; preparing financial documents, check all
+            visa documents to avoid unnecessary delay or rejection and also guide and train for Visa interviews and much
+            more.
+        </p>
+        <div id="main5">
+            <h3 id="d2"> Universities <br>we are offering</h3>
+            <div id="img">
+
+                <a href="https://uwaterloo.ca/" target="_blank"> <img
+                        src="https://kitesimmigration.com/images/client-1.png" alt="i1" class="p2"></a>
+
+                <a href="https://www.cbu.ca/" target="_blank"> <img
+                        src="https://kitesimmigration.com/images/client-2.png" alt="i2" class="p2"></a>
+
+                <a href="https://en.wikipedia.org/wiki/Quest_University"><img
+                        src="https://kitesimmigration.com/images/client-3.png" alt="i3" class="p2"></a>
+
+                <a href="https://www.dublinisc.com/"> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/aafcdf4a-2e6f-4734-b69a-d45abbd48610/UCD.png?w=1920&q=75&lossless=true&auto=format"
+                        alt="i4" class="p2"></a>
+
+                <a href="https://www.aberdeen-isc.ac.uk/"> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/65a23c40-4933-4b68-b5d9-ff74f968f851/aberdeen.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i5" class="p2"></a>
+
+                <a href="https://www.durhamisc.com/" target="_blank"> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/4e083874-9c1d-47c2-b17e-c2bfcb632693/durham.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i5" class="p2"></a>
+
+                <a href="https://isc.cardiff.ac.uk/" target="_blank"> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/7306bb6f-a21f-4801-bd60-73ed34de6c85/cardiff.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i6" class="p2"></a>
+
+                <a href="https://www.huddersfieldisc.com/" target="_blank"><img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/a1077874-9e1e-4c85-90c5-d601c52f7350/huddersfield.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i7" class="p2"></a>
+
+                <a href="https://www.kingstonisc.com/"> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/78953b09-36f1-4f0c-902b-d256b2759237/kingston.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i8" class="p2"></a>
+
+                <a href="https://isc.leedsbeckett.ac.uk/" target="_blank"><img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/10bff8c3-f5c9-4e8e-8700-2fb6383fdff2/leedsbeckett.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i9" class="p2"></a>
+
+                <a href="https://isc.sussex.ac.uk/" target="_blank"> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/6f4f40b1-181b-414e-adc0-93e47f3bbaa6/sussex.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i10" class="p2"></a>
+
+                <a href="https://www.rhulisc.com/" target="_blank"><img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/0fbe5b6c-8bdb-401f-befc-98eed536218d/rhul.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i11" class="p2"></a>
+
+                <a href=""> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/74f63e45-6a84-45e9-a5d8-29875539400f/Surrey23-resize.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i12" class="p2"></a>
+
+                <a href=""></a> <img
+                    src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/26e35e31-2180-4a8e-a06c-3c06dc7f000b/TEE_Logo_Black_159489.png?w=1920&q=75&lossless=true&auto=format"
+                    alt="i13" class="p2">
+
+                <a href=""> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/c531ce33-bc53-4cf5-8fa3-9cc4912397b3/CSUSM.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i14" class="p2"></a>
+
+
+                <a href=""><img src="https://kitesimmigration.com/images/logos/us/ljmu.svg" alt="i15" class="p2"></a>
+
+                <a href=""><img src="https://kitesimmigration.com/images/logos/studygroup-logo.svg" alt="i16"
+                        class="p2"></a>
+
+                <a href=""><img src="https://kitesimmigration.com/images/logos/north%20america/towson.svg" alt="i17"
+                        class="p2"></a>
+
+                <a href=""><img src="https://kitesimmigration.com/images/logos/north%20america/fau-24.svg" alt="i18"
+                        class="p2"></a>
+
+                <a href=""><img src="https://kitesimmigration.com/images/logos/north%20america/wwu.svg" alt="i19"
+                        class="p2"></a>
+
             </div>
         </div>
     </div>
