--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@
                 <a href="https://www.cbu.ca/" target="_blank"> <img
                         src="https://kitesimmigration.com/images/client-2.png" alt="i2" class="p2"></a>
 
-                <a href="https://en.wikipedia.org/wiki/Quest_University"><img
+                <a href="https://en.wikipedia.org/wiki/Quest_University" target="_blank"><img
                         src="https://kitesimmigration.com/images/client-3.png" alt="i3" class="p2"></a>
 
-                <a href="https://www.dublinisc.com/"> <img
+                <a href="https://www.dublinisc.com/" target="_blank"> <img
                         src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/aafcdf4a-2e6f-4734-b69a-d45abbd48610/UCD.png?w=1920&q=75&lossless=true&auto=format"
                         alt="i4" class="p2"></a>
 
-                <a href="https://www.aberdeen-isc.ac.uk/"> <img
+                <a href="https://www.aberdeen-isc.ac.uk/" target="_blank"> <img
                         src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/65a23c40-4933-4b68-b5d9-ff74f968f851/aberdeen.svg?w=1920&q=75&lossless=true&auto=format"
                         alt="i5" class="p2"></a>
 
@@ -205,7 +205,7 @@
                         src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/a1077874-9e1e-4c85-90c5-d601c52f7350/huddersfield.svg?w=1920&q=75&lossless=true&auto=format"
                         alt="i7" class="p2"></a>
 
-                <a href="https://www.kingstonisc.com/"> <img
+                <a href="https://www.kingstonisc.com/" target="_blank"> <img
                         src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/78953b09-36f1-4f0c-902b-d256b2759237/kingston.svg?w=1920&q=75&lossless=true&auto=format"
                         alt="i8" class="p2"></a>
 
@@ -221,31 +221,35 @@
                         src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/0fbe5b6c-8bdb-401f-befc-98eed536218d/rhul.svg?w=1920&q=75&lossless=true&auto=format"
                         alt="i11" class="p2"></a>
 
-                <a href=""> <img
+                <a href="https://www.surrey.ac.uk/" target="_blank"> <img
                         src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/74f63e45-6a84-45e9-a5d8-29875539400f/Surrey23-resize.svg?w=1920&q=75&lossless=true&auto=format"
                         alt="i12" class="p2"></a>
 
-                <a href=""></a> <img
-                    src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/26e35e31-2180-4a8e-a06c-3c06dc7f000b/TEE_Logo_Black_159489.png?w=1920&q=75&lossless=true&auto=format"
-                    alt="i13" class="p2">
+                <a href="https://www.tees.ac.uk/clearing/?gad_source=1&gclid=CjwKCAjw5Ky1BhAgEiwA5jGujnnRZWwkt-9i7OhQ5Z3nMJixku6uztQH-LXt94rGLeWKWSg-WoBP2xoC_XMQAvD_BwE&gclsrc=aw.ds"
+                    target="_blank"> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/26e35e31-2180-4a8e-a06c-3c06dc7f000b/TEE_Logo_Black_159489.png?w=1920&q=75&lossless=true&auto=format"
+                        alt="i13" class="p2"></a>
 
-                <a href=""> <img
+                <a href="#"> <img
                         src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/c531ce33-bc53-4cf5-8fa3-9cc4912397b3/CSUSM.svg?w=1920&q=75&lossless=true&auto=format"
                         alt="i14" class="p2"></a>
 
 
-                <a href=""><img src="https://kitesimmigration.com/images/logos/us/ljmu.svg" alt="i15" class="p2"></a>
+                <a href="https://www.ljmuisc.com/" target="_blank"><img
+                        src="https://kitesimmigration.com/images/logos/us/ljmu.svg" alt="i15" class="p2"></a>
 
-                <a href=""><img src="https://kitesimmigration.com/images/logos/studygroup-logo.svg" alt="i16"
+                <a href="https://www.studygroup.com/partners" target="_blank"><img
+                        src="https://kitesimmigration.com/images/logos/studygroup-logo.svg" alt="i16" class="p2"></a>
+
+                <a href="#"><img src="https://kitesimmigration.com/images/logos/north%20america/towson.svg" alt="i17"
                         class="p2"></a>
 
-                <a href=""><img src="https://kitesimmigration.com/images/logos/north%20america/towson.svg" alt="i17"
-                        class="p2"></a>
+                <a href="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/3b563baa-82fb-4a93-864c-0d57ae9866c6/FAU_prospectus_2024.pdf"
+                    target="_blank"><img src="https://kitesimmigration.com/images/logos/north%20america/fau-24.svg"
+                        alt="i18" class="p2"></a>
 
-                <a href=""><img src="https://kitesimmigration.com/images/logos/north%20america/fau-24.svg" alt="i18"
-                        class="p2"></a>
-
-                <a href=""><img src="https://kitesimmigration.com/images/logos/north%20america/wwu.svg" alt="i19"
+                <a href="https://international.wwu.edu/" target="_blank"><img
+                        src="https://kitesimmigration.com/images/logos/north%20america/wwu.svg" alt="i19"
                         class="p2"></a>
 
             </div>
