--- a/sec5.html
+++ b/sec5.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="sec5.css">
 </head>
 <body>
-    
+    <div id="main6">
+        <img src="https://kitesimmigration.com/images/footer-shape.png" alt="img" id="circle">
+        <div class="footer">
+            <div id="first">
+                <h2 id="d3">About Us</h2>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
