--- a/sec5.html
+++ b/sec5.html
@@ -10,8 +10,36 @@
     <div id="main6">
         <img src="https://kitesimmigration.com/images/footer-shape.png" alt="img" id="circle">
         <div class="footer">
-            <div id="first">
-                <h2 id="d3">About Us</h2>
+            <div class="sec">
+                <h2 class="d3">About Us</h2>
+                <p id="e1">Kites Immigration is one of the leading firms catering all the solutions related to the foreign travel under one platform.</p>
+            </div>
+            <div class="sec">
+                <h2 class="d3">Quick Links</h2>
+                  <ul>
+                      <li>Home</li>
+                      <li>About Us</li>
+                      <li>Services</li>
+                      <li>Contact Us</li>
+                </ul>
+            </div>
+            <div class="sec">
+                <h2 class="d3">Our Services</h2>
+                  <ul>
+                      <li>Student Visa</li>
+                      <li>Immigration Visa</li>
+                      <li>Visitor Visa</li>
+                     
+                </ul>
+            </div>
+            <div class="sec">
+                <h2 class="d3">Contact Address</h2>
+                  <p id="add">502, Sun Avenue One
+                    Shyamal, Manek Baug Rd,
+                    Ambawadi, Ahmedabad, Gujarat 380015</p>
+                    <text>+91 886 687 9001</text>
+                    <text>info@kitesimmigration.com</text>
+                    
             </div>
         </div>
     </div>
