--- a/sec5.html
+++ b/sec5.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="sec5.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div id="main6">
@@ -33,12 +34,16 @@
                 </ul>
             </div>
             <div class="sec">
+
                 <h2 class="d3">Contact Address</h2>
+                <span class="material-symbols-outlined">
+                    location_on
+                    </span>
                   <p id="add">502, Sun Avenue One
                     Shyamal, Manek Baug Rd,
                     Ambawadi, Ahmedabad, Gujarat 380015</p>
-                    <text>+91 886 687 9001</text>
-                    <text>info@kitesimmigration.com</text>
+                    <text id="pno">+91 886 687 9001</text>
+                    <text id="email"> info@kitesimmigration.com</text>
                     
             </div>
         </div>
