--- a/sec5.html
+++ b/sec5.html
@@ -1,51 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="sec5.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
+
 <body>
     <div id="main6">
         <img src="https://kitesimmigration.com/images/footer-shape.png" alt="img" id="circle">
         <div class="footer">
             <div class="sec">
                 <h2 class="d3">About Us</h2>
-                <p id="e1">Kites Immigration is one of the leading firms catering all the solutions related to the foreign travel under one platform.</p>
+                <p id="e1">Kites Immigration is one of the leading firms catering all the solutions related to the
+                    foreign travel under one platform.</p>
             </div>
             <div class="sec">
                 <h2 class="d3">Quick Links</h2>
-                  <ul>
-                      <li>Home</li>
-                      <li>About Us</li>
-                      <li>Services</li>
-                      <li>Contact Us</li>
+                <ul>
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Services</li>
+                    <li>Contact Us</li>
                 </ul>
             </div>
             <div class="sec">
                 <h2 class="d3">Our Services</h2>
-                  <ul>
-                      <li>Student Visa</li>
-                      <li>Immigration Visa</li>
-                      <li>Visitor Visa</li>
-                     
+                <ul>
+                    <li>Student Visa</li>
+                    <li>Immigration Visa</li>
+                    <li>Visitor Visa</li>
+
                 </ul>
             </div>
             <div class="sec">
                 <h2 class="d3">Contact Address</h2>
-                <span class="material-symbols-outlined">
-                    location_on
+                <p id="add">
+                    <span class="material-symbols-outlined">
+                        location_on
                     </span>
-                  <p id="add">502, Sun Avenue One
+
+                    502, Sun Avenue One
                     Shyamal, Manek Baug Rd,
-                    Ambawadi, Ahmedabad, Gujarat 380015</p>
-                    <text id="pno">  +91 886 687 9001</text>
-                    <text id="email"> info@kitesimmigration.com</text>
-                    
+                    Ambawadi, Ahmedabad, Gujarat 380015
+                </p>
+                <text id="pno">
+                    <span class="material-symbols-outlined">
+                        call
+                    </span>
+                    +91 8866879001</text>
+                <text id="email"> info@kitesimmigration.com</text>
+
             </div>
         </div>
     </div>
 </body>
+
 </html>
