--- a/sec5.html
+++ b/sec5.html
@@ -56,8 +56,12 @@
                     </span>
                     +91 8866879001</text>
                 <text id="email"> info@kitesimmigration.com</text>
-
-            </div>
+            </div>   
+        </div>
+        <div id="line">
+          <hr width="85%" color="black"> 
+          <p id="hert"></p>
+          <hr width="85%" color="black">  
         </div>
     </div>
 </body>
