--- a/sec5.html
+++ b/sec5.html
@@ -59,10 +59,12 @@
             </div>   
         </div>
         <div id="line">
-          <hr width="85%" color="black"> 
+          <hr width="85%" color="black" size="1px"> 
           <p id="hert"></p>
-          <hr width="85%" color="black">  
+          <hr width="85%" color="black" size="1px">  
+          <h4 id="vq">&copy; 2020 Kites Immigration</h4>
         </div>
+
     </div>
 </body>
 
