--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Kites Immigration & Visa Consultancy</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://kitesimmigration.com/images/logo.png">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 </head>
 
@@ -254,6 +258,60 @@
 
             </div>
         </div>
+    </div>
+
+    <div id="main6">
+        <img src="https://kitesimmigration.com/images/footer-shape.png" alt="img" id="circle">
+        <div class="footer">
+            <div class="sec">
+                <h2 class="d3">About Us</h2>
+                <p id="e1">Kites Immigration is one of the leading firms catering all the solutions related to the
+                    foreign travel under one platform.</p>
+            </div>
+            <div class="sec">
+                <h2 class="d3">Quick Links</h2>
+                <ul>
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Services</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+            <div class="sec">
+                <h2 class="d3">Our Services</h2>
+                <ul>
+                    <li>Student Visa</li>
+                    <li>Immigration Visa</li>
+                    <li>Visitor Visa</li>
+
+                </ul>
+            </div>
+            <div class="sec">
+                <h2 class="d3">Contact Address</h2>
+                <p id="add">
+                    <span class="material-symbols-outlined">
+                        location_on
+                    </span>
+
+                    502, Sun Avenue One
+                    Shyamal, Manek Baug Rd,
+                    Ambawadi, Ahmedabad, Gujarat 380015
+                </p>
+                <text id="pno">
+                    <span class="material-symbols-outlined">
+                        call
+                    </span>
+                    +91 8866879001</text>
+                <text id="email"> info@kitesimmigration.com</text>
+            </div>
+        </div>
+        <div id="line">
+            <hr width="85%" color="black" size="1px">
+            <p id="hert"></p>
+            <hr width="85%" color="black" size="1px">
+            <h4 id="vq">&copy; 2020 Kites Immigration</h4>
+        </div>
+
     </div>
 </body>
 
