--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 </head>
 
 <body>
-
-    <div class="flex-container">
-        <img src="https://kitesimmigration.com/images/logo.png" alt="logo" width="250px" id="logo">
-        <ul id="nav">
-            <b id="sv">Student Visa</b>
-            <b id="iv">Immigration Visa</b>
-            <b id="vv">Visitor Visa</b>
-            <button type="button" id="bt">Get Consultaion</button>
-        </ul>
+    <div id="navbar">
+        <div class="flex-container">
+            <img src="https://kitesimmigration.com/images/logo.png" alt="logo" width="250px" id="logo">
+            <ul id="nav">
+                <b id="sv">Student Visa</b>
+                <b id="iv">Immigration Visa</b>
+                <b id="vv">Visitor Visa</b>
+                <button type="button" id="bt">Get Consultaion</button>
+            </ul>
+        </div>
     </div>
 
     <div id="main">
