--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
     <div id="box1">
         <div id="left1">
-            <h1 id="head">Student Visa</h1>
-            <text id="no">1.</text>
+            <h1 class="head">Student Visa</h1>
+            <text class="no">1.</text>
             <p id="a2">
                 We provide path-way to students to study abroad over 100+ Governmnet Approved Colleges/Universities
                 Worldwide.
@@ -71,8 +71,8 @@
 
     <div id="box2">
         <div id="left2">
-            <h1 id="head">Immigration</h1>
-            <text id="no">2.</text>
+            <h1 class="head">Immigration</h1>
+            <text class="no">2.</text>
             <p id="a3">
                 Willing to settle Abroad? Get the Right Suggestion and Guidance to make a New Living Possible Overseas.
                 We offer guidance to clients to settle in foreign countries like CAN, AUS, NZ, USA with various
@@ -87,9 +87,9 @@
 
     <div id="box3">
         <div id="left3">
-            <h1 id="head">Visitor Visa</h1>
-            <text id="no">3.</text>
-            <p id="a3">
+            <h1 class="head">Visitor Visa</h1>
+            <text class="no">3.</text>
+            <p id="f1">
                 Travel Visas are required to gain entry to most countries around the world.For instance, you will need a
                 visa to USA, Canada,England, Australia, and Middle East, just to name a few of the popular destinations.
             </p>
