--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </div>
 
     <div id="main4">
-        <h1 id="tl">the engine <br>behind visa</h1>
+        <h1 id="tl" style="font-size: 60px;">the engine <br>behind visa</h1>
         <img src="https://kitesimmigration.com/images/woman.png" alt="img" id="p1">
         <h3 id="d"> <span style="text-decoration: overline;">a team </span> of experts </h3>
         <p id="d1">
